--- a/netflix-eda-python.ipynb
+++ b/netflix-eda-python.ipynb
@@ -14,36 +14,6 @@
     "tags": []
    },
    "source": [
-    "## 🎬 **The FliX Files: Misteries of Netflix**\n",
-    "\n",
-    "The truth is out there... and so is Netflix's ever-expanding library. From sci-fi thrillers to heartwarming rom-coms, Netflix has something for everyone (even if we still spend 30 minutes deciding what to watch). But have you ever wondered what secrets lurk behind the Play button?\n",
-    "\n",
-    "This notebook is here to investigate the mysteries of Netflix! We'll decode its data, uncover trends, create some cool graphs and find out that what can the data tell us about Netflix's and their users habits.\n",
-    "\n",
-    "### **Case Files:**\n",
-    "- 🎞️ Movies vs. TV Shows: Which format reigns supreme?\n",
-    "- 🌍 Geographics: Where do they come from?\n",
-    "- 📈 Release Year Trends: Has Netflix been getting better, or are we just nostalgic?\n",
-    "- 🎭 Genre Hotspots: From aliens to rom-coms, what do viewers love?\n",
-    "\n",
-    "\n",
-    "So, grab your trench coat 🕵️, turn up the spooky music 🎵, and let's crack open The FliX Files. The mysteries of Netflix are waiting to be revealed!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8903095c",
-   "metadata": {
-    "papermill": {
-     "duration": 0.006603,
-     "end_time": "2025-01-29T02:20:39.102148",
-     "exception": false,
-     "start_time": "2025-01-29T02:20:39.095545",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
     "## PREPARING THE ENVIRONMENT:"
    ]
   },
@@ -1382,7 +1352,7 @@
     "tags": []
    },
    "source": [
-    "## 🎬 Wrapping Up: The FliX Files Uncovered\n",
+    "## 🎬 Wrapping Up\n",
     "Netflix's vast content library tells a fascinating story of how the entertainment industry has evolved over time. From the dominance of movies to the ever-growing presence of TV shows, the platform continuously adapts to global trends and viewer preferences.\n",
     "\n",
     "### 🔍 Key Takeaways:\n",
